COLOR PICKER FIXED
so now it loads whatever color theme you chose even after tab reload (and probably browser restart)
also changed bio and fixed footer overlap on large text

--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@
 }
 
 .pink {
-    --bg: #fbc7e3;
-    --col: #000000;
-    --hi: #f180d5;
+    --bg: #ffe8f8;
+    --col: #ff64cb;
+    --hi: #ff90e3;
 }
 
 body {
@@ -32,8 +32,9 @@ a {
 }
 
 footer {
-    position:absolute;
-    bottom: 20px;
+    float: left;
+    height: 20px;
+    width: 200px;
 }
 
 .title {
